2010-08-23	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* test/tests.c: Removed file.
	* startup/bspstart.c: Fixed warnings.

2010-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Remove AC_CHECK_SIZEOF([void *]).

2010-06-29	Joel Sherrill <Joel.Sherrill@OARcorp.com>

	* configure.ac: Added AC_CHECK_SIZEOF macro.

2010-06-03	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* startup/sd-card-init.c: fix bug in mount table

2010-05-20	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* network/smsc9218i.c: Removed superfluous macros.

2010-05-10	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* include/bsp.h: Add BSP_SMALL_MEMORY.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* include/irq-config.h: Removed file.
	* Makefile.am, preinstall.am: Reflect changes above.

2010-04-07      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* configure.ac, startup/bspstart.c:
	renamed MPC55XX_CHIP_DERIVATE to MPC55XX_CHIP_TYPE

2010-04-07	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>
	* Makefile.am, configure.ac, preinstall.am, clock/clock-config.c,
	make/custom/gwlcfm.cfg, make/custom/mpc5566evb.cfg,
	startup/bspgetworkarea.c, startup/bspstart.c, startup/linkcmds,
	startup/start.S: fix GW_LCFM support
	* make/custom/mpc55xx.cfg, startup/linkcmds.memory: removed to get
	better structure
	* make/custom/mpc55xx.inc, startup/linkcmds.base,
	startup/linkcmds.gwlcfm, startup/linkcmds.mpc5566evb: added to
	have better structure

2010-03-27	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* network/smsc9218i.c tests/tests.c: Removed warnings
	* clock/clock-config.c: remove warning

2010-03-25	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* Makefile.am, confiugre.ac, include/bsp.h, startup/bspstart.c,
	startup/start.S:
	add support for GW_LCFM mpc551x based system

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am: Update for exception support changes.