@@ -7,6 +7,4 @@
 # @brief configuration file for the GWLCFM MPC5516 board
 #
 
-RTEMS_LINKCMDS=linkcmds.gwlcfm
-
 include $(RTEMS_ROOT)/make/custom/mpc55xx.inc
