@@ -7,6 +7,4 @@
 # @brief Configuration file for MPC5566 evaluation board.
 #
 
-RTEMS_LINKCMDS=linkcmds.mpc5566evb
-
 include $(RTEMS_ROOT)/make/custom/mpc55xx.inc
