@@ -18,5 +18,3 @@ CPU_CFLAGS = -mcpu=8540 -meabi -msdata -fno-common -msoft-float \
     -D__ppc_generic -mstrict-align
 
 CFLAGS_OPTIMIZE_V = -O2 -g -fno-keep-inline-functions
-
-LDFLAGS += -qnolinkcmds -T $(RTEMS_LINKCMDS)
